--- a/src/components/Admin/AgregarPlatillos.css
+++ b/src/components/Admin/AgregarPlatillos.css
@@ -6,6 +6,7 @@
 }
 
 .platillo-form {
+    scroll-margin-top: 100px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -87,4 +88,29 @@
 
 .platillos-lista li .descripcion p {
     margin: 5px 0;
+}
+
+.boton-desactivar {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.boton-desactivar:hover {
+    background-color: #d43636;
+}
+
+.boton-editar {
+    background-color: #ffc107;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-left: 10px;
 }
