--- a/src/components/Admin/AgregarPlatillos.css
+++ b/src/components/Admin/AgregarPlatillos.css
@@ -28,17 +28,19 @@
 }
 
 .boton-agregar {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #007bff;
+    background-color: #28a745;
     color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px 10px;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .boton-agregar:hover {
-    background-color: #0056b3;
+    background-color: #1f7f35;
 }
 
 .platillos-lista {
