--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -19,7 +19,7 @@ html, body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #1a1a1a;
 }
 
 .login-container {
@@ -46,7 +46,7 @@ html, body {
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  background-color: #f5f5f5;
+  background-color: #1a1a1a;
   max-width: 600px; /* Aumentado el ancho */
   max-height: 600px;
   width: 100%;
@@ -61,13 +61,13 @@ html, body {
 
 .login-header h1 {
   font-size: 2.2rem;
-  color: #333;
+  color: white;
   margin-bottom: 0.5rem;
   font-weight: bold;
 }
 
 .login-header p {
-  color: #666;
+  color: rgb(219, 218, 218);
   font-size: 1rem;
 }
 
@@ -84,30 +84,28 @@ html, body {
 .form-group label {
   display: block;
   margin-bottom: 0.5rem;
-  color: #333;
-  font-size: 1rem;
+  color: white;
+  font-size: 1.1rem;
   font-weight: 500;
 }
 
 .form-group input,
 .form-group select {
-  width: 100%;
-  padding: 0.9rem; /* Un poco más grande */
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  font-size: 1.1rem;
+  width: 100% !important;
+  padding: 0.9rem !important; /* Un poco más grande */
+  border: 2px solid #ddd !important;
+  border-radius: 6px !important;
+  font-size: 1.1rem !important;
 }
 
-.form-group input:focus,
-.form-group select:focus {
-  border-color: #4a90e2;
-  outline: none;
+.error-message{
+  color: rgb(255, 0, 0);
 }
 
 .login-button {
   width: 100%;
   padding: 1rem;
-  background-color: #4a90e2;
+  background-color: #28a745;
   color: white;
   border: none;
   border-radius: 6px;
@@ -115,10 +113,11 @@ html, body {
   font-weight: 600;
   cursor: pointer;
   margin-top: 0.5rem;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .login-button:hover {
-  background-color: #3a7bc8;
+  background-color: #1f7f35;
 }
 
 /* Estilos para pantallas grandes */
