--- a/src/components/Mesero/PanelMesero.css
+++ b/src/components/Mesero/PanelMesero.css
@@ -163,7 +163,7 @@
 .mesa-info p {
   margin: 5px 0;
   font-size: 0.9rem;
-  color: #666;
+  color: #a39d9d;
 }
 
 .mesa-actions {
@@ -300,4 +300,10 @@
 body {
   overflow-y: auto;
   min-height: 100vh;
+}
+
+.form-group {
+  label {
+    color: #e9e9e9;
+  }
 }
