cosas de agregarplatillo

--- a/src/components/Admin/AgregarPlatillos.css
+++ b/src/components/Admin/AgregarPlatillos.css
@@ -17,6 +17,21 @@
     border-radius: 10px;
 }
 
+.platillo-form input {
+    width: 100%;
+    padding: 0.6rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    outline: none;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .platillo-form input:focus {
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+  }
+
 .titulo {
     text-align: center;
 }
