--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -105,7 +105,7 @@ html, body {
 .login-button {
   width: 100%;
   padding: 1rem;
-  background-color: #28a745;
+  background-color: #007bdd;
   color: white;
   border: none;
   border-radius: 6px;
@@ -117,7 +117,7 @@ html, body {
 }
 
 .login-button:hover {
-  background-color: #1f7f35;
+  background-color: #007add4d;
 }
 
 /* Estilos para pantallas grandes */
